--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vanilla-extract/css": "^1.5.0",
     "@vanilla-extract/next-plugin": "^1.0.0",
     "@vanilla-extract/recipes": "^0.1.0",
+    "@vanilla-extract/sprinkles": "^1.2.0",
     "clsx": "^1.1.1",
     "modern-normalize": "^1.1.0",
     "next": "11.1.2",
